--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@mongez/moonlight",
-    "version": "1.0.9",
+    "version": "1.0.10",
     "description": "A Massive React Builder for web apps.",
     "main": "src/index.ts",
     "dependencies": {
@@ -14,15 +14,16 @@
         "@mantine/modals": "^5.10.4",
         "@mantine/notifications": "^5.10.4",
         "@mantine/tiptap": "^5.10.4",
-        "@mongez/cache": "^1.2.0",
-        "@mongez/config": "^1.0.25",
-        "@mongez/dom": "^1.1.1",
+        "@mongez/cache": "^1.2.1",
+        "@mongez/config": "^1.0.26",
+        "@mongez/dom": "^1.1.2",
         "@mongez/events": "^1.0.9",
         "@mongez/http": "^2.1.2",
+        "@react-google-maps/api": "^2.18.1",
         "@mongez/localization": "^2.1.2",
         "@mongez/react": "^2.1.4",
         "@mongez/react-atom": "^2.0.2",
-        "@mongez/react-form": "^1.5.25",
+        "@mongez/react-form": "^1.5.26",
         "@mongez/react-helmet": "^1.0.9",
         "@mongez/react-hooks": "^1.3.2",
         "@mongez/react-router": "^2.1.21",
@@ -32,19 +33,19 @@
         "@mongez/validator": "^1.0.18",
         "dayjs": "^1.11.7",
         "@thaddeusjiang/react-sortable-list": "^0.1.1",
-        "@tiptap/extension-color": "^2.0.0-beta.217",
-        "@tiptap/extension-font-family": "^2.0.0-beta.217",
-        "@tiptap/extension-highlight": "^2.0.0-beta.217",
-        "@tiptap/extension-image": "^2.0.0-beta.217",
-        "@tiptap/extension-link": "^2.0.0-beta.217",
-        "@tiptap/extension-placeholder": "^2.0.0-beta.217",
-        "@tiptap/extension-text-align": "^2.0.0-beta.217",
-        "@tiptap/extension-text-style": "^2.0.0-beta.217",
-        "@tiptap/extension-underline": "^2.0.0-beta.217",
-        "@tiptap/extension-youtube": "^2.0.0-beta.217",
-        "@tiptap/react": "^2.0.0-beta.217",
-        "@tiptap/starter-kit": "^2.0.0-beta.217",
-        "@tiptap/pm": "^2.0.0-beta.217",
+        "@tiptap/extension-color": "^2.0.0-beta.218",
+        "@tiptap/extension-font-family": "^2.0.0-beta.218",
+        "@tiptap/extension-highlight": "^2.0.0-beta.218",
+        "@tiptap/extension-image": "^2.0.0-beta.218",
+        "@tiptap/extension-link": "^2.0.0-beta.218",
+        "@tiptap/extension-placeholder": "^2.0.0-beta.218",
+        "@tiptap/extension-text-align": "^2.0.0-beta.218",
+        "@tiptap/extension-text-style": "^2.0.0-beta.218",
+        "@tiptap/extension-underline": "^2.0.0-beta.218",
+        "@tiptap/extension-youtube": "^2.0.0-beta.218",
+        "@tiptap/react": "^2.0.0-beta.218",
+        "@tiptap/starter-kit": "^2.0.0-beta.218",
+        "@tiptap/pm": "^2.0.0-beta.218",
         "prosemirror-commands": "^1.5.0",
         "prosemirror-dropcursor": "1.7.0",
         "prosemirror-gapcursor": "^1.3.1",
