--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@mongez/moonlight",
-    "version": "1.0.25",
-    "description": "A Massive React Builder for web apps.",
+    "version": "1.0.26",
+    "description": "A Massive React Builder and ready-made components for web apps.",
     "main": "src/index.ts",
     "dependencies": {
         "@emotion/react": "^11.10.6",
@@ -12,18 +12,14 @@
         "@mantine/modals": "^5.10.4",
         "@mantine/notifications": "^5.10.4",
         "@mantine/tiptap": "^5.10.4",
-        "@mongez/cache": "^1.2.1",
         "@mongez/events": "^1.0.9",
         "@mongez/http": "^2.1.2",
         "@mongez/localization": "^2.1.2",
         "@mongez/react-atom": "^2.0.2",
         "@mongez/react-form": "^1.5.28",
-        "@mongez/react-helmet": "^1.0.9",
         "@mongez/react-hooks": "^1.3.2",
-        "@mongez/react-router": "^2.1.21",
-        "@mongez/reinforcements": "^2.2.6",
+        "@mongez/reinforcements": "^2.2.7",
         "@mongez/supportive-is": "^1.0.11",
-        "@mongez/user": "^1.0.11",
         "@mongez/validator": "^1.0.18",
         "dayjs": "^1.11.7",
         "@thaddeusjiang/react-sortable-list": "^0.1.1",
@@ -55,6 +51,11 @@
     },
     "keywords": [
         "react-dashboard",
+        "react-builder",
+        "react-page-builder",
+        "page-builder",
+        "quick-dashboard",
+        "quick-app-builder",
         "quick-dashboard-builder"
     ],
     "author": "hassanzohdy",
