--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@mongez/moonlight",
-    "version": "1.1.21",
+    "version": "1.1.22",
     "description": "A Massive React Builder and ready-made components for web apps.",
     "main": "src/index.ts",
     "dependencies": {
@@ -15,6 +15,7 @@
         "@mongez/events": "^2.1.0",
         "@mongez/http": "^2.2.4",
         "@mongez/localization": "^2.2.2",
+        "@mongez/react-localization": "^1.0.4",
         "@mongez/react-atom": "^2.1.1",
         "@mongez/react-form": "^2.0.15",
         "@mongez/react-hooks": "^1.3.3",
