--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@mongez/moonlight",
-    "version": "1.1.22",
+    "version": "1.1.23",
     "description": "A Massive React Builder and ready-made components for web apps.",
     "main": "src/index.ts",
     "dependencies": {
@@ -21,6 +21,7 @@
         "@mongez/react-hooks": "^1.3.3",
         "@mongez/reinforcements": "^2.3.6",
         "@mongez/supportive-is": "^1.0.12",
+        "@tabler/icons-react": "^2.20.0",
         "dayjs": "^1.11.7",
         "@react-google-maps/api": "^2.18.1",
         "use-places-autocomplete": "^4.0.0",
